--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 
+\usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage{amsmath}
