New section and fixed errors

--- a/corporigido.tex
+++ b/corporigido.tex
@@ -56,7 +56,7 @@ Da \eqref{inerzia} e \eqref{densita}:
 \subsubsection{Teorema di Huygens-Steiner}
 Per trovare $I$ su un asse parallelo:
 \begin{equation}
-    \boxed{I = T_{CM} + M d^2}
+    \boxed{I = I_{CM} + M d^2}
     \label{teoHS}
 \end{equation}
 dove $d$ è la distanza tra i due assi
