--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \usepackage[scr=boondoxo,scrscaled=1.05]{mathalfa}
 \usepackage{xfrac}
 
-\pgfplotsset{compat = 1.18}
+\pgfplotsset{compat = 1.18, ytick style={draw=none}, xtick style={draw=none}}
 \definecolor{blue}{RGB}{31,18,213}
 \definecolor{green}{RGB}{31,182,83}
 \definecolor{purple}{RGB}{158, 86, 209}
