--- a/termodinamica.tex
+++ b/termodinamica.tex
@@ -1,6 +1,7 @@
 \section{Fluidi}
 \Def{Fluido Ideale} non ha viscosità
 \vspace{\baselineskip}
+
 \Def{Pressione} 
     \begin{equation*}
         p = \lim_{S \to 0} \frac{F_\perp}{S} = \frac{dF_\perp}{dS}
@@ -22,6 +23,7 @@
 
 \Def{Isotropia della Pressione} La pressione non dipende dall'orientazione del sistema
 \vspace{\baselineskip}
+
 \Def{Densità} 
     \begin{equation*}
         \rho = \lim_{\Delta V \to 0} \frac{\Delta m}{\Delta V} = \frac{dm}{dV}
@@ -231,6 +233,19 @@ c = \frac{C}{m} \;\; \left( \frac{J}{Kg \cdot K} \right)
 \[
 c = \frac{C}{n} \;\; \left( \frac{J}{mol \cdot K} \right)
 \]
+
+\subsection{Calorimetria}
+\Def{Calore} Energia trasferibile tra i sistemi
+\begin{equation}
+    \boxed{Q = m c \Delta T}
+\end{equation}
+Durante un cambio di fase il Calore è definito come:
+\begin{equation}
+    \boxed{Q = m \lambda}
+\end{equation}
+Dove $\lambda$ è detto \emph{calore latente} ed è specifico per ogni sostanza.
+
+\input{graph2.tex}
 
 \subsection{Realzione di Mayer}
 \begin{equation}
