--- a/termodinamica.tex
+++ b/termodinamica.tex
@@ -278,7 +278,7 @@ pV^\alpha = cost
 \begin{center}
 \begin{tabular}{| l | c | c | c |}
     \hline
-    \textbf{Gas} & \textbf{$c_p$} & \textbf{$c_v$} & \textbf{$\gamma$} \\
+    \textbf{Gas} & \textbf{$c_v$} & \textbf{$c_p$} & \textbf{$\gamma$} \\
     \hline
     Monoatomico & $\sfrac{3}{2} R$ & $\sfrac{5}{2} R$ & $\sfrac{5}{3}$\\
     Biatomico & $\sfrac{5}{2} R$ & $\sfrac{7}{2} R$ & $\sfrac{7}{5}$\\
